--- a/google-cloud-binary-authorization/pom.xml
+++ b/google-cloud-binary-authorization/pom.xml
@@ -67,6 +67,12 @@
       <artifactId>threetenbp</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>io.grafeas</groupId>
+      <artifactId>grafeas</artifactId>
+      <version>2.0.6</version>
+    </dependency>
+
     <!-- Test dependencies -->
     <dependency>
       <groupId>junit</groupId>
