Override perfmark version to 0.25.0 to resolve dependency conflict.

--- a/google-cloud-binary-authorization/pom.xml
+++ b/google-cloud-binary-authorization/pom.xml
@@ -71,6 +71,11 @@
       <groupId>io.grafeas</groupId>
       <artifactId>grafeas</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.perfmark</groupId>
+      <artifactId>perfmark-api</artifactId>
+      <version>0.25.0</version>
+    </dependency>
 
     <!-- Test dependencies -->
     <dependency>
