--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,11 @@
         <artifactId>grafeas</artifactId>
         <version>2.2.4</version>
       </dependency>
-
+      <dependency>
+        <groupId>io.perfmark</groupId>
+        <artifactId>perfmark-api</artifactId>
+        <version>0.25.0</version>
+      </dependency>
       <dependency>
         <groupId>com.google.cloud</groupId>
         <artifactId>google-cloud-shared-dependencies</artifactId>
