--- a/.github/.OwlBot.yaml
+++ b/.github/.OwlBot.yaml
@@ -16,6 +16,7 @@ docker:
   image: "gcr.io/cloud-devrel-public-resources/owlbot-java:latest"
 
 deep-remove-regex:
+- "/samples/snippets/generated"
 - "/grpc-google-.*/src"
 - "/proto-google-.*/src"
 - "/google-.*/src"
@@ -26,4 +27,5 @@ deep-copy-regex:
 - source: "/google/cloud/binaryauthorization/(v.*)/.*-java/grpc-google-.*/src"
   dest: "/owl-bot-staging/$1/grpc-google-cloud-binary-authorization-$1/src"
 - source: "/google/cloud/binaryauthorization/(v.*)/.*-java/gapic-google-.*/src"
-  dest: "/owl-bot-staging/$1/google-cloud-binary-authorization/src"
+  dest: "/owl-bot-staging/$1/google-cloud-binary-authorization/src"- source: "/google/cloud/binaryauthorization/(v.*)/.*-java/samples/snippets/generated"
+  dest: "/owl-bot-staging/$1/samples/snippets/generated"
