--- a/.github/.OwlBot.yaml
+++ b/.github/.OwlBot.yaml
@@ -27,5 +27,6 @@ deep-copy-regex:
 - source: "/google/cloud/binaryauthorization/(v.*)/.*-java/grpc-google-.*/src"
   dest: "/owl-bot-staging/$1/grpc-google-cloud-binary-authorization-$1/src"
 - source: "/google/cloud/binaryauthorization/(v.*)/.*-java/gapic-google-.*/src"
-  dest: "/owl-bot-staging/$1/google-cloud-binary-authorization/src"- source: "/google/cloud/binaryauthorization/(v.*)/.*-java/samples/snippets/generated"
+  dest: "/owl-bot-staging/$1/google-cloud-binary-authorization/src"
+- source: "/google/cloud/binaryauthorization/(v.*)/.*-java/samples/snippets/generated"
   dest: "/owl-bot-staging/$1/samples/snippets/generated"
