--- a/google-cloud-binary-authorization/pom.xml
+++ b/google-cloud-binary-authorization/pom.xml
@@ -71,17 +71,17 @@
       <artifactId>threetenbp</artifactId>
     </dependency>
 
-    <dependency>
-      <groupId>io.grafeas</groupId>
-      <artifactId>grafeas</artifactId>
-    </dependency>
-
     <!-- Test dependencies -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
       <version>4.13.2</version>
+    </dependency>
+    <dependency>
+      <groupId>io.grafeas</groupId>
+      <artifactId>grafeas</artifactId>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
